css/style.css
/* ... */
@media (min-width: 37em) {
    nav {
        position: sticky;
        z-index: 100;
        top: calc(var(--border)* -1);
        bottom: calc(var(--border)* -1);
    }
}
nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}
nav a{
    color: var(--clr-light);
    text-decoration: none;
}
nav a::before,
nav a::after {
    display: none;
}
nav a:hover,
nav a:focus {
    color: var(--clr-primary-300);
}

/* links */
a:not(.link-github):not(.sponsor-button) {
    color: var(--clr-primary-200);
    font-weight: var(--fw-bold);
    overflow: hidden;
    white-space: nowrap;
    text-decoration-color: var(--clr-orange);
    text-decoration-style: double;
    text-underline-offset: 0.25em;
    transition: all 200ms;
}
a:not(.sponsor-button):hover,
a:not(.sponsor-button):focus {
  color: var(--clr-orange);
  text-decoration-color:  var(--clr-primary-200);
}
.link-github {
    text-decoration: none;
    display: inline-flex;
    align-items: center;
    gap: 0.5em;
    background: var(--clr-primary-200);
    color: var(--clr-light);
    padding: .5em 1.25em;
    border: 5px solid var(--clr-primary-200);
    border-radius: 0.3em;
}
.link-github span {
    width: 1em;
    display: flex;
}
.link-github svg {
    width: 1em;
    fill: var(--clr-light);
    transition: fill 350ms, transform 1s ease-out;
}
a.link-github:hover,
a.link-github:focus {
    background: transparent;
    color: var(--clr-primary-200);
}
a.link-github:hover svg {       
    fill: var(--clr-primary-200);
    transform: rotate(360deg); 
}
/* main */
#about ul {
    --gap: 0.25em;
    list-style: none;
    margin: 0;
    padding: 0;
    columns: 7em 4;
    gap: var(--gap);
}
#about li {
    align-self: start;
    font-size: 1rem;
    padding: 0.25em;
    border: 1px solid var(--clr-orange);
    margin-bottom: var(--gap);
    border-radius: 0.2em;
    break-inside: avoid;
}
#about section:nth-of-type(2) p:nth-of-type(2) {
    font-weight: var(--fw-bold);
    color: var(--clr-primary-500);
} 

/* page and sponsor footer */
.page-footer .container {
    max-width: 900px;
    margin: 0 auto;
    padding: 1.5rem;
    font-size: 1rem;
}
.page-footer {
    /* text-align: center; */
    background: var(--clr-primary-400);
    color: var(--clr-light);
}
.page-footer ul {
    /* list-style: "🌠" ; */
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
    list-style: none;
}
.page-footer ul li {
    flex: 1;
    margin: 5px;
    text-align: center;
}
.page-footer ul li a {
    text-decoration: none;
    display: inline-block;
    font-weight: bold;
    white-space: nowrap;
    text-align: center;
    width: 100%;
    color: var(--clr-light) !important;
    background: var(--clr-primary-200);
    padding: .5em 1.25em;
    border: 5px solid var(--clr-primary-200);
    border-radius: 0.3em;
}
.page-footer ul li a:hover {
    background: transparent;
    color: var(--clr-primary-200);
}
#sponsor-footer {
    width: 100%;
    max-width: 100%;
    background: var(--clr-primary-500);
    color: var(--clr-light);
    padding: 1.5em;
}
#sponsor-footer p {
    max-width: 70ch;
    margin-right: auto;
    margin-left: auto;
    display: flex;
    font-size: 1rem;
    color: var(--clr-orange);
}
#sponsor-footer .sponsor-button {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    font-size: 0.9rem;
    text-align: center;
    text-decoration: none;
    line-height: 1;
    padding: 0.5rem;
    margin-left: 15px;
    color: var(--clr-dark);
    background-color: var(--clr-light);
    border: 4px solid var(--clr-orange);
    border-radius: 5px;
    transition: 180ms all ease-in-out; 
}
#sponsor-footer .sponsor-button:hover{
    color: var(--clr-orange);
    -webkit-filter: drop-shadow(0 0 0.2rem hsla(var(--clr-neon-orange), 0.4))
      drop-shadow(0.5rem 0.5rem 0.2rem hsla(var(--clr-neon-orange), 0.6))
      drop-shadow(-0.5rem 0.5rem 0.2rem hsla(var(--clr-neon-orange), 0.6))
      drop-shadow(0.5rem -0.5rem 0.2rem hsla(var(--clr-neon-orange), 0.6))
      drop-shadow(-0.5rem -0.5rem 0.2rem hsla(var(--clr-neon-orange), 0.6));
      
    filter: drop-shadow(0 0 0.2rem hsla(var(--clr-neon-orange), 0.4))
      drop-shadow(0.5rem 0.5rem 0.2rem hsla(var(--clr-neon-orange), 0.6))
      drop-shadow(-0.5rem 0.5rem 0.2rem hsla(var(--clr-neon-orange), 0.6))
      drop-shadow(0.5rem -0.5rem 0.2rem hsla(var(--clr-neon-orange), 0.6))
      drop-shadow(-0.5rem -0.5rem 0.2rem hsla(var(--clr-neon-orange), 0.6));
}
@media (max-width: 60ch) {
	#sponsor-footer p {
		flex-wrap: wrap;
		justify-content: center;
	}
}

@media (min-width: 60em) {
    body {
        display: grid;
        grid-template-columns: minmax(14rem, max-content) 14rem minmax(0.5em, 1fr);
        column-gap: 1em;
        grid-template-areas: 
        "skip-link skip-link skip-link"
        "header header header"
        "nav nav nav"
        "main aside-one ."
        "main aside-two ."
        "main . ."
        "footer footer footer"
        "aside-three aside-three aside-three";
    }
    .skip-link {
        grid-area: skip-link;
    }
    header {
        grid-area: header;
    }
    nav {
        grid-area: nav;
    }
    main {
        grid-area: main;
    }
    .profile {
        grid-area: aside-one;
    }
    #styles {
        grid-area: aside-two;
    }
    footer {
        grid-area: footer;
    }
    #sponsor-footer {
        grid-area: aside-three;
    }
}

#files .container,
.profile .container,
#styles .container {
    padding: 0;
}
#files,
.profile,
#styles {
    font-family: var(--ff-heading);
    font-size: 0.85em;
    max-width: max-content;
    margin: 0 auto;
    padding: 1em;
    background: var(--clr-primary-400);
}
/* ... */

